# SmallVulkanEngine

./: CMakeLists.txt
Shaders/: CompileShaders.bat  Skybox.frag  Skybox.frag.spv  Skybox.ver.spv  Skybox.vert  cubeShadow.frag  cubeShadow.frag.spv  cubeShadow.ver.spv  cubeShadow.vert  default.frag  default.frag.spv  default.vert  default.vert.spv  gizmo.frag  gizmo.frag.spv  gizmo.ver.spv  gizmo.vert  shadow.frag  shadow.frag.spv  shadow.ver.spv  shadow.vert
engine/: CMakeLists.txt
engine/include/: Constants.h  MainWindow.h
engine/include/Components/: Component.h  MeshComponent.h  ModelComponent.h  TextureComponent.h  TransformComponent.h
engine/include/Core/: Camera.h  Constants.h  Delegate.h  GizmoController.h  ImguiEditor.h  InputSystem.h  Logger.h  MainWindow.h
engine/include/Entity/: GameObject.h  PointLight.h  Scene.h  SkyLight.h
engine/src/: Constants.cpp  EntryPoint.cpp  MainWindow.cpp
engine/src/Components/: Component.cpp  MeshComponent.cpp  ModelComponent.cpp  TextureComponent.cpp  TransformComponent.cpp
engine/src/Core/: Camera.cpp  Constants.cpp  ImguiEditor.cpp  InputSystem.cpp  Logger.cpp  MainWindow.cpp
engine/src/Entity/: GameObject.cpp  PointLight.cpp  Scene.cpp  SkyLight.cpp
ext/assimp/lib/Release/: assimp-vc143-mt.lib
renderer/: CMakeLists.txt
renderer/include/: BlockingQueue.h  Gizmos.h  Graphics.h  SkyBox.h  StaticMesh.h  Texture.h  Utility.h  precomp.h
renderer/include/imgui/: imgui.h  imgui_impl_vulkan.h  imgui_internal.h
renderer/include/lights/: OmniDirectionalLight.h  PointLightShadowMap.h  PointLights.h  ShadowMap.h
renderer/src/: Gizmos.cpp  Graphics.cpp  Skybox.cpp  StaticMesh.cpp  Texture.cpp  Utility.cpp
renderer/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp
renderer/src/lights/: OmniDirectionalLight.cpp  PointLightShadowMap.cpp  PointLights.cpp  ShadowMap.cpp
